--- a/CSS-GLASS-STYLES.html
+++ b/CSS-GLASS-STYLES.html
@@ -201,21 +201,40 @@ CARDS.push({
   buildCSS: buildSimpleCSS
 });
 
-/* === 3 Dimmed === */
+/* === 3 iOS Liquid Dark === */
 CARDS.push({
-  id:'dim', title:'Dimmed Glass', key:'blur + brightness↓',
+  id:'iosdark', title:'iOS Liquid Dark', key:'vibrant blur · top highlight',
   setup(p){
-    p._bgcol='13,14,35'; p.style.backgroundColor='rgba(13,14,35,0.26)'; p._more='brightness(0.90)';
-    setBlurSat(p,14,115, p._more);
-    p._inset=''; p._oblur=28; p._oalpha=.22; rebuildShadow(p);
-    p._bw=1; p._ba=.12; p.style.border='1px solid rgba(255,255,255,.12)';
+    p._bgcol='22,23,35'; p.style.backgroundColor='rgba(22,23,35,0.28)';
+    setBlurSat(p,18,200);
+    p._inset=''; p._oblur=30; p._oalpha=.25; rebuildShadow(p);
+    p._bw=1; p._ba=.16; p.style.border='1px solid rgba(255,255,255,.16)';
+    const fx=el('div'); fx.className='iosDarkFx'; p.appendChild(fx);
+    function paint(){ Object.assign(fx.style,{
+      position:'absolute',inset:'0',pointerEvents:'none',borderRadius:'inherit',
+      background:`linear-gradient(${p._hlAngle}deg, rgba(255,255,255,${p._hlAlpha}), rgba(255,255,255,0) 60%)`
+    }); }
+    p._hlAlpha=.22; p._hlAngle=120; p._paint=paint; paint();
   },
   sliders:[
-    bgAlphaSlider(.26), ...baseBlurSat(14,115),
-    slider('Brightness %',60,120,1,90,'%',(p,v)=>{ p._more=`brightness(${v/100})`; setBlurSat(p, p._blur??14, p._sat??115, p._more); }),
-    borderWidthSlider(1), borderAlphaSlider(.12), ...outerShadowSliders(28,.22)
+    bgAlphaSlider(.28), ...baseBlurSat(18,200),
+    slider('Highlight α',0,.6,.01,.22,'',(p,v)=>{ p._hlAlpha=v; p._paint(); }),
+    slider('Highlight angle °',0,360,1,120,'deg',(p,v)=>{ p._hlAngle=v; p._paint(); }),
+    borderWidthSlider(1), borderAlphaSlider(.16), ...outerShadowSliders(30,.25)
   ],
-  buildCSS: buildSimpleCSS
+  buildCSS(p){
+    return buildOverlayCSS(p, 'before', (p) => {
+      const s = getComputedStyle(p.querySelector('.iosDarkFx'));
+      return [
+        'content: ""',
+        'position: absolute',
+        'inset: 0',
+        'pointer-events: none',
+        'border-radius: inherit',
+        `background: ${s.backgroundImage || s.background}`
+      ];
+    });
+  }
 });
 
 /* === 4 Acrylic === */
@@ -327,18 +346,19 @@ CARDS.push({
 
 /* === 7 Tinted === */
 CARDS.push({
-  id:'tint', title:'Tinted (HSLA)', key:'tint hue · alpha',
+  id:'tint', title:'Tinted (HSLA)', key:'tint hue · light · alpha',
   setup(p){
-    p._h=270; p._tinta=.18;
-    p.style.backgroundColor=`hsla(${p._h},70%,45%,${p._tinta})`;
+    p._h=270; p._tinta=.18; p._l=45;
+    p.style.backgroundColor=`hsla(${p._h},70%,${p._l}%,${p._tinta})`;
     setBlurSat(p,12,120);
     p._inset=''; p._oblur=30; p._oalpha=.22; rebuildShadow(p);
     p._bw=1; p._ba=.12; p.style.border='1px solid rgba(255,255,255,.12)';
   },
   sliders:[
     ...baseBlurSat(12,120),
-    slider('Tint hue °',0,360,1,270,'deg',(p,v)=>{ p._h=v; p.style.backgroundColor=`hsla(${p._h},70%,45%,${p._tinta})`; }),
-    slider('Tint α',0,.6,.01,.18,'',(p,v)=>{ p._tinta=v; p.style.backgroundColor=`hsla(${p._h},70%,45%,${p._tinta})`; }),
+    slider('Tint hue °',0,360,1,270,'deg',(p,v)=>{ p._h=v; p.style.backgroundColor=`hsla(${p._h},70%,${p._l}%,${p._tinta})`; }),
+    slider('Tint light %',20,80,1,45,'%',(p,v)=>{ p._l=v; p.style.backgroundColor=`hsla(${p._h},70%,${p._l}%,${p._tinta})`; }),
+    slider('Tint α',0,.6,.01,.18,'',(p,v)=>{ p._tinta=v; p.style.backgroundColor=`hsla(${p._h},70%,${p._l}%,${p._tinta})`; }),
     borderWidthSlider(1), borderAlphaSlider(.12), ...outerShadowSliders(30,.22)
   ],
   buildCSS: buildSimpleCSS
@@ -360,22 +380,20 @@ CARDS.push({
   buildCSS: buildSimpleCSS
 });
 
-/* === 9 Inset Bevel === */
+/* === 9 Midnight Mirror === */
 CARDS.push({
-  id:'bevel', title:'Inset Bevel (4‑side)', key:'bevel px · light α · dark α',
+  id:'midnight', title:'Midnight Mirror', key:'inner glow · deep shadow',
   setup(p){
-    p._bgcol='13,14,35'; p.style.backgroundColor='rgba(13,14,35,0.16)'; setBlurSat(p,12,118);
-    p._px=2; p._la=.35; p._da=.30;
-    p._inset = `inset 0 ${p._px}px 0 rgba(255,255,255,${p._la}), inset 0 -${p._px}px 0 rgba(0,0,0,${p._da}), inset ${p._px}px 0 0 rgba(0,0,0,${p._da}), inset -${p._px}px 0 0 rgba(255,255,255,${p._la})`;
-    p._oblur=24; p._oalpha=.22; rebuildShadow(p);
-    p._bw=1; p._ba=.18; p.style.border='1px solid rgba(255,255,255,.18)';
+    p._bgcol='13,14,35'; p.style.backgroundColor='rgba(13,14,35,0.16)'; setBlurSat(p,14,120);
+    p._innerBlur=30; p._innerA=.06; p._inset=`inset 0 0 ${p._innerBlur}px rgba(255,255,255,${p._innerA})`;
+    p._oblur=34; p._oalpha=.30; rebuildShadow(p);
+    p._bw=1; p._ba=.14; p.style.border='1px solid rgba(255,255,255,.14)';
   },
   sliders:[
-    bgAlphaSlider(.16), ...baseBlurSat(12,118),
-    slider('Bevel px',1,12,1,2,'px',(p,v)=>{ p._px=v; p._inset = `inset 0 ${p._px}px 0 rgba(255,255,255,${p._la}), inset 0 -${p._px}px 0 rgba(0,0,0,${p._da}), inset ${p._px}px 0 0 rgba(0,0,0,${p._da}), inset -${p._px}px 0 0 rgba(255,255,255,${p._la})`; rebuildShadow(p); }),
-    slider('Light α',.05,.8,.01,.35,'',(p,v)=>{ p._la=v; p._inset = `inset 0 ${p._px}px 0 rgba(255,255,255,${p._la}), inset 0 -${p._px}px 0 rgba(0,0,0,${p._da}), inset ${p._px}px 0 0 rgba(0,0,0,${p._da}), inset -${p._px}px 0 0 rgba(255,255,255,${p._la})`; rebuildShadow(p); }),
-    slider('Dark α',.05,.8,.01,.30,'',(p,v)=>{ p._da=v; p._inset = `inset 0 ${p._px}px 0 rgba(255,255,255,${p._la}), inset 0 -${p._px}px 0 rgba(0,0,0,${p._da}), inset ${p._px}px 0 0 rgba(0,0,0,${p._da}), inset -${p._px}px 0 0 rgba(255,255,255,${p._la})`; rebuildShadow(p); }),
-    ...outerShadowSliders(24,.22), borderWidthSlider(1), borderAlphaSlider(.18)
+    bgAlphaSlider(.16), ...baseBlurSat(14,120),
+    slider('Inner glow blur',0,60,1,30,'px',(p,v)=>{ p._innerBlur=v; p._inset=`inset 0 0 ${v}px rgba(255,255,255,${p._innerA})`; rebuildShadow(p); }),
+    slider('Inner glow α',0,.4,.01,.06,'',(p,v)=>{ p._innerA=v; p._inset=`inset 0 0 ${p._innerBlur}px rgba(255,255,255,${v})`; rebuildShadow(p); }),
+    borderWidthSlider(1), borderAlphaSlider(.14), ...outerShadowSliders(34,.30)
   ],
   buildCSS: buildSimpleCSS
 });
@@ -402,95 +420,76 @@ CARDS.push({
   buildCSS: buildSimpleCSS
 });
 
-/* === 11 Neon Gradient Border === */
+/* === 11 iOS Vibrant === */
 CARDS.push({
-  id:'neon', title:'Neon Gradient Border', key:'gradient rim + glow',
+  id:'iosvibrant', title:'iOS Vibrant', key:'tinted bg · radial spot',
   setup(p){
-    p._bgcol='13,14,35'; p.style.position='relative'; p.style.backgroundColor='rgba(13,14,35,0.12)'; setBlurSat(p,12,120);
-    p._bw=2; p._ba=0; p.style.border='2px solid transparent';
-    p._angle=135; p._glowBlur=14; p._glowA=.9;
-    p.style.backgroundImage='linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,0)), linear-gradient(135deg,#00ffd5,#7a5cff,#ff00e6)';
-    p.style.backgroundOrigin='border-box'; p.style.backgroundClip='padding-box, border-box';
-    const glow=el('div'); glow.className='neonGlow'; Object.assign(glow.style,{
-      position:'absolute', inset:'-2px', borderRadius:'inherit', pointerEvents:'none',
-      background:'linear-gradient(135deg,#00ffd5,#7a5cff,#ff00e6)', filter:'blur(14px)', opacity:'0.9',
-      WebkitMask:'linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0)',
-      WebkitMaskComposite:'xor', maskComposite:'exclude', padding:'2px'
-    }); p.appendChild(glow);
+    p._h=210; p._bgA=.24; p._ba=.18; p._bw=1; p._spotA=.35;
+    p.style.backgroundColor=`hsla(${p._h},85%,45%,${p._bgA})`;
+    setBlurSat(p,20,180);
+    p.style.border=`${p._bw}px solid hsla(${p._h},85%,80%,${p._ba})`;
+    p._oblur=32; p._oalpha=.25; p._inset=''; rebuildShadow(p);
+    const fx=el('div'); fx.className='vibrantFx'; p.appendChild(fx);
+    function paint(){ Object.assign(fx.style,{
+      position:'absolute',inset:'0',pointerEvents:'none',borderRadius:'inherit',
+      background:`radial-gradient(circle at 30% 30%, hsla(${p._h},90%,80%,${p._spotA}), hsla(${p._h},90%,80%,0) 60%)`
+    }); }
+    p._paint=paint; paint();
   },
   sliders:[
-    bgAlphaSlider(.12), ...baseBlurSat(12,120),
-    slider('Border width px',0,10,1,2,'px',(p,v)=>{ p._bw=v; p.style.borderWidth=v+'px'; const g=p.querySelector('.neonGlow'); g.style.inset = (-v)+'px'; g.style.padding = v+'px'; }),
-    slider('Glow blur px',0,60,1,14,'px',(p,v)=>{ p._glowBlur=v; p.querySelector('.neonGlow').style.filter=`blur(${v}px)`; }),
-    slider('Glow opacity',0,1,.01,.9,'',(p,v)=>{ p._glowA=v; p.querySelector('.neonGlow').style.opacity=String(v); }),
-    slider('Angle °',0,360,1,135,'deg',(p,v)=>{ p._angle=v; p.style.backgroundImage=`linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,0)), linear-gradient(${v}deg,#00ffd5,#7a5cff,#ff00e6)`; p.querySelector('.neonGlow').style.background=`linear-gradient(${v}deg,#00ffd5,#7a5cff,#ff00e6)`; })
+    slider('Hue °',0,360,1,210,'deg',(p,v)=>{ p._h=v; p.style.backgroundColor=`hsla(${p._h},85%,45%,${p._bgA})`; p.style.border=`${p._bw}px solid hsla(${p._h},85%,80%,${p._ba})`; p._paint(); }),
+    slider('Tint α',0,.6,.01,.24,'',(p,v)=>{ p._bgA=v; p.style.backgroundColor=`hsla(${p._h},85%,45%,${p._bgA})`; }),
+    slider('Border width px',0,6,1,1,'px',(p,v)=>{ p._bw=v; p.style.border=`${p._bw}px solid hsla(${p._h},85%,80%,${p._ba})`; }),
+    slider('Border α',0,.6,.01,.18,'',(p,v)=>{ p._ba=v; p.style.border=`${p._bw}px solid hsla(${p._h},85%,80%,${p._ba})`; }),
+    slider('Spot α',0,.6,.01,.35,'',(p,v)=>{ p._spotA=v; p._paint(); }),
+    ...baseBlurSat(20,180), ...outerShadowSliders(32,.25)
   ],
   buildCSS(p){
-    const mainCss = [];
-    writeBaseCSS(p,mainCss);
-    mainCss.push(`background-image: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,0)), linear-gradient(${p._angle}deg,#00ffd5,#7a5cff,#ff00e6);`);
-    mainCss.push(`background-origin: border-box;`);
-    mainCss.push(`background-clip: padding-box, border-box;`);
-
-    const s = getComputedStyle(p.querySelector('.neonGlow'));
-    const pseudoCss = [
-      'content: ""',
-      'position: absolute',
-      `inset: -${p._bw}px`,
-      'pointer-events: none',
-      'border-radius: inherit',
-      `padding: ${p._bw}px`,
-      `opacity: ${p._glowA}`,
-      `background: ${s.background}`,
-      `filter: blur(${p._glowBlur}px)`,
-      '-webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0)',
-      '-webkit-mask-composite: xor',
-      'mask-composite: exclude'
-    ];
-
-    const finalCss = [
-      `.your-selector {`,
-      ...mainCss.map(line => `  ${line}`),
-      `}`,
-      ``,
-      `.your-selector::after {`,
-      ...pseudoCss.map(line => `  ${line}`),
-      `}`
-    ];
-    return finalCss.join('\n');
-  }
-});
-
-/* === 12 Duotone Prism Edge === */
-CARDS.push({
-  id:'duoprism', title:'Duotone Prism Edge', key:'two inner rims',
-  setup(p){
-    p._bgcol='13,14,35'; p.style.backgroundColor='rgba(13,14,35,0.12)'; setBlurSat(p,12,125);
-    p._bw=1; p._ba=.10; p.style.border='1px solid rgba(255,255,255,.10)';
-    p._oblur=26; p._oalpha=.20; rebuildShadow(p);
-    p._rimThk=2; p._cA=.55; p._mA=.55;
-    const rim=el('div'); rim.className='duoRim'; p.appendChild(rim);
-    function paint(){ rim.style.position='absolute'; rim.style.inset='0'; rim.style.pointerEvents='none'; rim.style.borderRadius='inherit';
-      rim.style.boxShadow=`inset 0 0 0 1px rgba(0,255,255,${p._cA}), inset 0 0 0 ${p._rimThk}px rgba(255,0,255,${p._mA})`; }
-    p._paintRim=paint; paint();
-  },
-  sliders:[
-    bgAlphaSlider(.12), ...baseBlurSat(12,125),
-    slider('Rim thickness px',1,10,1,2,'px',(p,v)=>{ p._rimThk=v; p._paintRim(); }),
-    slider('Cyan α',0,1,.01,.55,'',(p,v)=>{ p._cA=v; p._paintRim(); }),
-    slider('Magenta α',0,1,.01,.55,'',(p,v)=>{ p._mA=v; p._paintRim(); }),
-    ...outerShadowSliders(26,.20), borderWidthSlider(1), borderAlphaSlider(.10)
-  ],
-  buildCSS(p){
-    return buildOverlayCSS(p, 'after', (p) => {
-      const s = getComputedStyle(p.querySelector('.duoRim'));
+    return buildOverlayCSS(p, 'before', (p) => {
+      const s = getComputedStyle(p.querySelector('.vibrantFx'));
       return [
         'content: ""',
         'position: absolute',
         'inset: 0',
         'pointer-events: none',
         'border-radius: inherit',
-        `box-shadow: ${s.boxShadow}`
+        `background: ${s.backgroundImage || s.background}`
+      ];
+    });
+  }
+});
+
+/* === 12 Liquid Aurora === */
+CARDS.push({
+  id:'aurora', title:'Liquid Aurora', key:'angle gradient · film α',
+  setup(p){
+    p._bgcol='13,14,35'; p.style.backgroundColor='rgba(13,14,35,0.14)'; setBlurSat(p,16,150);
+    p._angle=135; p._filmA=.28;
+    p._oblur=28; p._oalpha=.22; p._inset=''; rebuildShadow(p);
+    p._bw=1; p._ba=.12; p.style.border='1px solid rgba(255,255,255,.12)';
+    const fx=el('div'); fx.className='auroraFx'; p.appendChild(fx);
+    function paint(){ Object.assign(fx.style,{
+      position:'absolute',inset:'0',pointerEvents:'none',borderRadius:'inherit',
+      background:`linear-gradient(${p._angle}deg, rgba(0,255,255,${p._filmA}), rgba(255,0,255,${p._filmA*0.7}), rgba(0,255,255,0))`
+    }); }
+    p._paint=paint; paint();
+  },
+  sliders:[
+    bgAlphaSlider(.14), ...baseBlurSat(16,150),
+    slider('Film α',0,.6,.01,.28,'',(p,v)=>{ p._filmA=v; p._paint(); }),
+    slider('Angle °',0,360,1,135,'deg',(p,v)=>{ p._angle=v; p._paint(); }),
+    borderWidthSlider(1), borderAlphaSlider(.12), ...outerShadowSliders(28,.22)
+  ],
+  buildCSS(p){
+    return buildOverlayCSS(p, 'before', (p) => {
+      const s = getComputedStyle(p.querySelector('.auroraFx'));
+      return [
+        'content: ""',
+        'position: absolute',
+        'inset: 0',
+        'pointer-events: none',
+        'border-radius: inherit',
+        `background: ${s.backgroundImage || s.background}`
       ];
     });
   }
